# ffmpeg-light

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: command.rs  config.rs  error.rs  filter.rs  lib.rs  probe.rs  thumbnail.rs  transcode.rs  types.rs
tests/: test_audio_filters.rs  test_builder_composition.rs  test_error_handling.rs  test_video_filters.rs
